IDP-1729 - Extend attribute-sourced c14n to IdPAttributePrincipal
https://issues.shibboleth.net/jira/browse/IDP-1729